[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-safe-overflow-position-001.html https://bugs.webkit.org/show_bug.cgi?id=280800

Reviewed by Antti Koivisto.

1. Add support for overflow 'safe' for both main and cross axis directions.
2. When consulting flex box for self align, use flex box style for the overflow value too.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::handleMainAxisAlignment const):
(WebCore::Layout::FlexLayout::handleCrossAxisAlignmentForFlexItems const):
(WebCore::Layout::FlexLayout::handleCrossAxisAlignmentForFlexLines const):

Canonical link: https://commits.webkit.org/284607@main